--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,4 +11,6 @@
     <string name="repositori">Repositori</string>
     <string name="followers">Pengikut</string>
     <string name="followings">Mengikuti</string>
+    <string name="packag">Packages</string>
+    <string name="projects">Projects</string>
 </resources>
