--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="repositori">Repositori</string>
     <string name="followers">Followers</string>
     <string name="followings">Followings</string>
+    <string name="packag">Packages</string>
+    <string name="projects">Projects</string>
 </resources>
