--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="followings">Followings</string>
     <string name="packag">Packages</string>
     <string name="projects">Projects</string>
+    <string name="favorite">favorite</string>
+    <string name="settings">Settings</string>
 </resources>
